--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 client_secret_483892014756-8566424ijs1vmsm6pevoing2r5m70g13.apps.googleusercontent.com
 OAuthClient
+client_secret_483892014756-8566424ijs1vmsm6pevoing2r5m70g13.apps.googleusercontent.com.json
+OAuthClient.txt
